# technobot

./: .gitignore  Cargo.toml  README.md  env.example
src/: main.rs
src/commands/: dictionary.rs  ffxiv.rs  misc.rs  mod.rs
src/framework/: args.rs
src/util/: arg_parser.rs
