[package]
name = "technobot"
version = "0.1.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]

[dependencies]
rand = "0.3.16"
chrono = "0.4.0"
futures = "*"
hyper = "0.11.2"
scraper = "0.4.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tokio-core = "0.1"

[dependencies.serenity]
version = "0.4.0"
features = ["cache", "framework", "standard_framework"]
