[package]
name = "technobot"
version = "0.1.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]

[dependencies]
chrono = "0.4.0"
discord = "0.8.0"
dotenv = "0.10.1"
rand = "0.3.16"
regex = "0.2.2"
reqwest = "0.8.0"
scraper = "0.4.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"

[dependencies.nom]
version = "3.2.0"
features = ["verbose-errors"]
